# service-catalog-engine-for-terraform-os

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPORTANT_UPDATES.md  Makefile  README.md  samconfig.toml  template.yaml
cfn-templates/: Bootstrap.yaml  TerraformProvisioningAccount.yaml
example/: Makefile  terraform-example-launch-role.yaml
example/.parameters/: terraform-example-portfolio-params.json  terraform-example-product-params.json
example/terraform-example-bucket/: main.tf  provider.tf  variables.tf
lambda-functions/provisioning-operations-handler/: provisioning_operations_handler.py  test_provisioning_operations_handler.py
lambda-functions/state_machine_lambdas/: get_state_file_outputs.py  notify_provision_result.py  notify_terminate_result.py  notify_update_result.py  poll_command_invocation.py  requirements.txt  select_worker_host.py  send_apply_command.py  send_destroy_command.py  test_get_state_file_outputs.py  test_notify_provision_result.py  test_notify_terminate_result.py  (+5 more)
sample-provisioning-artifacts/: Readme.md
statemachine/: manage_provisioned_product.json  terminate_provisioned_product.json
tools/: README.md  deploy-terraform-engine.sh  manage-terraform-engine.py  requirements-dev.txt  requirements.txt
wrapper-scripts/: Makefile  Readme.md  pyproject.toml  requirements.txt  setup.py
wrapper-scripts/terraform_runner/: CommandManager.py  CustomLogger.py  WorkspaceManager.py  __main__.py  artifact_manager.py  override_manager.py  test_CommandManager.py  test_WorkspaceManager.py  test_artifact_manager.py  test_override_manager.py
(+32 files in other folders)
